--- a/index.html
+++ b/index.html
@@ -76,17 +76,16 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="avatar" />
       <div>
-        <h1>Rendy Faqot</h1>
-        <div>Software Engineer · .NET · Golang · Cloud</div>
-        <div class="links" style="margin-top:.5rem">
-          <button class="link-profile" href="https://github.com/your-username" target="_blank">GitHub</button>
-          <button class="link-profile" href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</button>
+        <h1>Fiorenza Laila Azmi Ardhani</h1>
+        <div>Software Engineer · NodeJS · Golang</div>
+        <div class="links" style="margin-top:.5rem; color: blue">
+          <a class="link-profile" href="https://github.com/fiorenzaa" target="_blank">GitHub</a>
+          <a class="link-profile" href="https://www.linkedin.com/in/fiorenza-laila" target="_blank">LinkedIn</a>
         </div>
         <div class="skills" aria-hidden>
-          <span class="skill">.NET</span>
+          <span class="skill">NodeJS</span>
           <span class="skill">Golang</span>
           <span class="skill">Docker</span>
-          <span class="skill">AWS</span>
         </div>
       </div>
     </header>
@@ -97,19 +96,18 @@
     </section>
     <section>
       <h2>Education</h2>
-      <p>Universitas Pendidikan Indonesia — S.Kom, Computer Science</p>
-      <p>Institut Teknologi Bandung — M.T, Teknik Informatika</p>
+      <p>Telkom University — S.Kom, Computer Science</p>
     </section>
     <section>
       <h2>Projects</h2>
       <ul>
-        <li><strong>Good Night App</strong> — Sleep tracking API (Rails, Elasticsearch)</li>
-        <li><strong>Smart Door Lock Simulator</strong> — Face recognition (Dotnet, Emgu.CV)</li>
+        <li><strong>Scoreboard App</strong> — Tracking score for a match (HTML, CSS, JS)</li>
+        <li><strong>My Inventory</strong> — Simple CRUD for inventory (React, PHP)</li>
       </ul>
     </section>
     <section>
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:rendy@radyalabs.com">rendy@radyalabs.com</a></p>
+      <p>Email: <a href="mailto:fiorenza.laila24@gmail.com">fiorenza.laila24@gmail.com</a></p>
     </section>
     <footer>
       Built with ♥ · Published via GitHub Pages
