--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="avatar" />
       <div>
-        <h1>Fiorenza Laila Azmi Ardhani</h1>
+        <h1>Fiorenza Laila</h1>
         <div>Software Engineer · NodeJS · Golang</div>
         <div class="links" style="margin-top:.5rem; color: blue">
           <a class="link-profile" href="https://github.com/fiorenzaa" target="_blank">GitHub</a>
