mencoba conflict via education

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="avatar" />
       <div>
-        <h1>Rendy Faqot</h1>
+        <h1>Fiorenza Laila A. A.</h1>
         <div>Software Engineer · .NET · Golang · Cloud</div>
         <div class="links" style="margin-top:.5rem">
           <button class="link-profile" href="https://github.com/your-username" target="_blank">GitHub</button>
