--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
     </header>
     <section>
       <h2>About</h2>
-      <p>Passionate software engineer building reliable backend systems. I enjoy clean architecture, distributed
-        systems, and mentoring peers.</p>
+      <p>I’m a Bachelor of Computer Science from Telkom University, enthusiastic in learning an entry-level software
+        development
+        that offers professional growth and advancement within company management. Strong analytical and leadership
+        skills
+        through participation in research projects and organizational activities.</p>
     </section>
     <section>
       <h2>Education</h2>
