edit github and linkedin link

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     <header>
       <img class="avatar" src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="avatar" />
       <div>
-        <h1>Fiorenza Laila A. A.</h1>
-        <div>Software Engineer · .NET · Golang · Cloud</div>
-        <div class="links" style="margin-top:.5rem">
-          <button class="link-profile" href="https://github.com/your-username" target="_blank">GitHub</button>
-          <button class="link-profile" href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</button>
+        <h1>Fiorenza Laila Azmi Ardhani</h1>
+        <div>Software Engineering Enthusiast</div>
+        <div class="links" style="margin-top:.5rem; color: blue;">
+          <a class="link-profile" href="https://github.com/fiorenzaa" target="_blank">GitHub</a>
+          <a class="link-profile" href="https://www.linkedin.com/in/fiorenza-laila" target="_blank">LinkedIn</a>
         </div>
         <div class="skills" aria-hidden>
           <span class="skill">NodeJS</span>
