--- a/index.html
+++ b/index.html
@@ -4,77 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>My Profile</title>
-  <style>
-    body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
-      margin: 0;
-      padding: 0;
-      background: #f7f7f9;
-      color: #222
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 3rem auto;
-      padding: 1.5rem;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(20, 20, 40, 0.06)
-    }
-
-    header {
-      display: flex;
-      gap: 1rem;
-      align-items: center
-    }
-
-    img.avatar {
-      width: 96px;
-      height: 96px;
-      border-radius: 12px;
-      object-fit: cover
-    }
-
-    h1 {
-      margin: .2rem 0
-    }
-
-    .skills {
-      display: flex;
-      flex-wrap: wrap;
-      gap: .5rem;
-      margin-top: .5rem
-    }
-
-    .skill {
-      background: #eef2ff;
-      padding: .35rem .6rem;
-      border-radius: 999px;
-      font-size: .9rem
-    }
-
-    section {
-      margin-top: 1.25rem
-    }
-
-    .links a {
-      text-decoration: none;
-      color: inherit;
-      margin-right: 1rem
-    }
-
-    footer {
-      margin-top: 2rem;
-      font-size: .85rem;
-      color: #666
-    }
-  </style>
+  <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
   <div class="container">
     <header>
-      <img class="avatar" src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="avatar" />
+      <img class="avatar" src="img/img.png" alt="avatar" />
       <div>
         <h1>Fiorenza Laila Azmi Ardhani</h1>
         <div>Software Engineering Enthusiast</div>
